# hstr-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
fake_ncurses/: Cargo.toml
fake_ncurses/src/: lib.rs
hstr/: Cargo.toml
hstr/src/: app.rs  main.rs  sort.rs  ui.rs  util.rs
src/: app.rs  main.rs  sort.rs  ui.rs  util.rs
