[package]
name = "hstr-rs"
version = "0.1.0"
authors = ["adder46 <dedmauz69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
libc = "0.2"
dirs = "2.0.2"
regex = "1"
gethostname = "0.2.1"
