[package]
name = "hstr-rs"
version = "0.2.0"
authors = ["adder46 <dedmauz69@gmail.com>"]
edition = "2018"

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
libc = "0.2"
dirs = "2.0.2"
regex = "1"
gethostname = "0.2.1"
setenv = "0.1"
maplit = "1.0.2"
itertools = "0.9.0"

[dev-dependencies]
rstest = "0.6.4"
fake_ncurses = { path = "../fake_ncurses" }
